<resources>
    <string name="app_name">Essence</string>
    <string name="exit_app_help_toast">Press again to exit</string>

    <string name="navigation_menu_essence">Essence</string>
    <string name="navigation_menu_article">Article</string>
    <string name="navigation_menu_weekly_popular">Weekly Popular</string>
    <string name="navigation_menu_girl">Girl</string>
    <string name="navigation_menu_settings">Settings</string>

    <string name="tab_category_type_article">Article</string>
    <string name="tab_category_type_essence">Essence</string>
    <string name="tab_category_type_girl">Girl</string>

    <string name="recycler_view_state_loading">Loading...</string>
    <string name="recycler_view_state_failed">Load failed</string>
    <string name="recycler_view_state_no_more">No more data</string>

    <string name="menu_weekly_popular_sorted_by_view_count">Sorted by view counts</string>
    <string name="menu_weekly_popular_sorted_by_star_count">Sorted by star counts</string>
    <string name="menu_weekly_popular_sorted_by_comment_count">Sorted by comment counts</string>

    <string name="recycler_view_empty_helper">No data</string>

    <string name="settings_dark_theme">Dark Theme</string>
    <string name="settings_clear_cache">Clear Cache</string>
    <string name="settings_about"> About Essence</string>

    <string-array name="dialog_dark_theme">
        <item>Flow System</item>
        <item>Normal Mode</item>
        <item>Night Mode</item>
    </string-array>

    <string name="dialog_clear_cache_title">Notice</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_clear_cache_tips">Are you sure to clear all cache?This will delete local contents and pictures</string>
    <string name="dialog_about_open_code_url">Open code url:</string>

    <string name="exception_timeout">Connection is timeout,please try again</string>
    <string name="exception_http">Network exception,please try again latter</string>
    <string name="exception_no_network">Network is disabled,please try again latter</string>
    <string name="exception_unknown">Occur some exception,please try again</string>
</resources>