<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_navigation_essence"
        android:icon="@drawable/icon_menu_navigation_essence_normal"
        android:title="@string/navigation_menu_essence"
        android:orderInCategory="0"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_navigation_article"
        android:icon="@drawable/icon_menu_navigation_article_normal"
        android:title="@string/navigation_menu_article"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_navigation_weekly_popular"
        android:icon="@drawable/icon_menu_navigation_popular_normal"
        android:title="@string/navigation_menu_weekly_popular"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_navigation_girl"
        android:icon="@drawable/icon_menu_navigation_girl_normal"
        android:title="@string/navigation_menu_girl"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_navigation_settings"
        android:icon="@drawable/icon_menu_navigation_settings_normal"
        android:title="@string/navigation_menu_settings"
        android:orderInCategory="4"
        app:showAsAction="always" />

</menu>