<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/menu_navigation_essence">

    <fragment
        android:id="@+id/menu_navigation_essence"
        android:name="xyz.sachil.essence.fragment.EssenceFragment"
        android:label="@string/navigation_menu_essence"
        tools:layout="@layout/fragment_pager" />

    <fragment
        android:id="@+id/menu_navigation_article"
        android:name="xyz.sachil.essence.fragment.ArticleFragment"
        android:label="@string/navigation_menu_article"
        tools:layout="@layout/fragment_pager" />

    <fragment
        android:id="@+id/menu_navigation_weekly_popular"
        android:name="xyz.sachil.essence.fragment.WeeklyPopularFragment"
        android:label="@string/navigation_menu_weekly_popular" />

    <fragment
        android:id="@+id/menu_navigation_girl"
        android:name="xyz.sachil.essence.fragment.GirlImageFragment"
        android:label="@string/navigation_menu_girl"
        tools:layout="@layout/fragment_type_data" />

    <fragment
        android:id="@+id/menu_navigation_settings"
        android:name="xyz.sachil.essence.fragment.SettingsFragment"
        android:label="@string/navigation_menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>